--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@400;800&family=Roboto&display=swap" 
   rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="./svg/sidebar/F_logo.svg" type="#">
   <title>HW_07 "HTML5 & CSS3"</title>
 </head>
 
